@@ -1,3 +1,9 @@
+2009-06-16  Brad Taylor  <brad@getcoded.net>
+
+	* strongwind/cache.py: Set the process group of our launched
+	application so that the application and its children can be killed with
+	os.killpg(proc.pid, signal.SIGKILL).  (#585983)
+
 2009-04-07  Brian G. Merrell  <bgmerrell@novell.com>
 	
 	* strongwind/accessibles.py: No longer cache the log name as the
